==> beeep-sheeep/hydpro/User/lcd/bsp_ili9341_lcd.c <==
#include "./lcd/bsp_ili9341_lcd.h"
#include "./font/fonts.h"
#include "stm32f10x_fsmc.h"

void ILI9341_Init ( void )
{
	ILI9341_GPIO_Config ();
	ILI9341_FSMC_Config ();
	
	ILI9341_BackLed_Control ( ENABLE );      //light up LCD
	ILI9341_Rst ();
	ILI9341_REG_Config ();
	
	ILI9341_GramScan(LCD_SCAN_MODE);
}

void ILI9341_BackLed_Control ( FunctionalState enumState )
{
	if ( enumState )
		GPIO_ResetBits ( ILI9341_BK_PORT, ILI9341_BK_PIN );	
	else
		GPIO_SetBits ( ILI9341_BK_PORT, ILI9341_BK_PIN );
		
}

void ILI9341_Rst ( void )
{			
	GPIO_ResetBits ( ILI9341_RST_PORT, ILI9341_RST_PIN );	 //low level reset

	ILI9341_Delay ( 0xAFF ); 					   

	GPIO_SetBits ( ILI9341_RST_PORT, ILI9341_RST_PIN );		 	 

	ILI9341_Delay ( 0xAFF ); 	
	
}

static uint16_t ILI9341_Read_PixelData ( void )	
{	
	uint16_t usRG=0, usB=0 ;

	
	ILI9341_Write_Cmd ( 0x2E );   /* read data*/
	//Discard the result of the previous read
	ILI9341_Read_Data (); 	      /*FIRST READ OUT DUMMY DATA*/
	
	//Gets the values of the red and green channels
	usRG = ILI9341_Read_Data ();  	/*READ OUT RED AND GREEN DATA  */
	usB = ILI9341_Read_Data ();  		/*READ OUT BLUE DATA*/

  return ( (usRG&0xF800)| ((usRG<<3)&0x7E0) | (usB>>11) );
}
